// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseUrl parses url into segments and param map given url "" 1`] = `
Object {
  "params": Object {},
  "segments": Array [
    "",
  ],
}
`;

exports[`parseUrl parses url into segments and param map given url "/" 1`] = `
Object {
  "params": Object {},
  "segments": Array [
    "",
  ],
}
`;

exports[`parseUrl parses url into segments and param map given url "items" 1`] = `
Object {
  "params": Object {},
  "segments": Array [
    "items",
  ],
}
`;

exports[`parseUrl parses url into segments and param map given url "items/" 1`] = `
Object {
  "params": Object {},
  "segments": Array [
    "items",
  ],
}
`;

exports[`parseUrl parses url into segments and param map given url "items/:id" 1`] = `
Object {
  "params": Object {
    ":id": "",
  },
  "segments": Array [
    "items",
    ":id",
  ],
}
`;
